@startuml ex

class MyDatabase {
  - _data: Map<Integer, String>
  - _count: int
  + write(inputString: String): int
}

class EncodingModule {
  + encodeWithFiles()
  + encodeBasedOnNetworkAndDatabase()
}

class EncodingModuleClient {
  + main(args: String[])
}

EncodingModule ..> MyDatabase
EncodingModule ..> FileReader
EncodingModule ..> FileWriter
EncodingModuleClient --> EncodingModule

@enduml
